# ProjectWork_OTUS_Professional

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements_extract.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260330_0001_initial_schema.py  20260401_0002_post_comments.py  20260408_0003_admin_controls.py
app/: main.py
app/api/v1/: admin.py  auth.py  chats.py  files.py  messages.py  posts.py  users.py  websocket.py
app/core/: cache.py  config.py  exceptions.py  log_config.py  logging.py  redis.py  security.py
app/db/: mixins.py  session.py
app/models/: __init__.py  chat.py  file.py  message.py  post.py  user.py
app/repositories/: chat.py  file.py  message.py  post.py  user.py
app/schemas/: auth.py  base.py  chat.py  file.py  mappers.py  message.py  post.py  user.py
app/services/: admin.py  auth.py  chat.py  file.py  message.py  post.py
app/static/css/: app.css
app/static/js/: app.js
app/storage/: local.py
app/templates/: index.html
app/websocket/: manager.py
docs/: API.md  ARCHITECTURE.md
scripts/: run_mypy_hook.py  start.sh
tests/: conftest.py  test_api_routes.py  test_auth_deps.py  test_auth_service.py  test_chat_service.py  test_file_service.py  test_health.py  test_message_service.py  test_post_service.py  test_redis_integration.py  test_security.py
