[project]
name = "async-messenger"
version = "0.1.0"
description = "Async messenger backend with Bootstrap frontend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.4",
    "fastapi>=0.135.2",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
fix = true
show-fixes = true
exclude = [".git", "__pycache__", "build", "dist", "alembic/versions", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "UP", "I", "B", "N", "ASYNC"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-between-types = 1
order-by-type = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
no_implicit_optional = true
pretty = true
show_error_codes = true
exclude = ["scripts", "docs", "tests"]

[[tool.mypy.overrides]]
module = ["aiofiles"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
